// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block position_relative flexShrink_0"
    >
      <span>
        <i
          class="display_block"
          role="presentation"
        >
          <svg
            class="display_block width_full height_full"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block flexGrow_1"
    >
      <span
        class="inlineText display_block textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block display_flex position_relative pill_mobile_base center_mobile_base flexShrink_0 center_mobile_base bullet_base primary_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_2_base primaryText_base"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block flexGrow_1"
    >
      <span
        class="inlineText display_block textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block display_flex position_relative pill_mobile_base center_mobile_base flexShrink_0 center_mobile_base bullet_base primary_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_2_base primaryText_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block flexGrow_1"
    >
      <span
        class="inlineText display_block textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block display_flex position_relative pill_mobile_base center_mobile_base flexShrink_0 center_mobile_base bullet_base primary_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_2_base primaryText_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block flexGrow_1"
    >
      <span
        class="inlineText display_block textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block display_flex position_relative pill_mobile_base center_mobile_base flexShrink_0 center_mobile_base bullet_base secondary_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_2_base secondaryText_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="block 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="block flexGrow_1"
    >
      <span
        class="inlineText display_block textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
